tree-sitter-kiwi/test/corpus/message.txt
==================
Message test
==================

// sdsd
message Shape // sddsd
{ // sddsd
// sddsd
  uint type = 1; // sddsd
// sddsd  string name = 2;
  uint[] str = 3 [deprecated]; // sddsd
} // sddsd

struct Point {
float x;
  float  y; // comment
}

---

(source_file
  (comment)
  (message_declaration
    (identifier)
    (comment)
    (message_body
      (comment)
      (comment)
      (message_field
        (message_field_type
          (type_name
            (identifier)))
        (message_field_name
          (identifier))
        (message_field_value
          (number)))
      (comment)
      (comment)
      (message_field
        (message_field_type
          (type_name
            (identifier)
            (array)))
        (message_field_name
          (identifier))
        (message_field_value
          (number)
          (deprecated_tag)))
      (comment)))
  (comment)
  (struct_declaration
    (identifier)
    (struct_body
      (struct_field
        (struct_field_type
          (type_name
            (identifier)))
        (struct_field_name
          (identifier)))
      (struct_field
        (struct_field_type
          (type_name
            (identifier)))
        (struct_field_name
          (identifier)))
      (comment))))
